Accept ADC command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(esp32MassMeasure)
 
 add_executable(massMeasure  src/main.c
                             src/hx711_driver.c
-                            src/ble_server.c)
+                            src/ble_server.c
+                            src/diagnostic_tasks.c)
 
 # Tell IDF build to link against this target.
 set(IDF_PROJECT_EXECUTABLE massMeasure)
